--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 相机权限 -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <!-- 相册，文件读取 -->
+    <uses-permission android:name="android,permiSSiOn.READ EXTERNAL STORAGE" />
+    <uses-permission android:name="android.permiSSiOn.WRITE EXTERNAL STORAGE"/>
+    <!-- 麦克风 -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
+
 
     <application
       android:name=".MainApplication"
