--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.29.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-vision-camera": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
