--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/geolocation": "^3.2.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -20,6 +22,7 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.29.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
