存储+获取地理位置

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "type": "node-terminal",
       "cwd": "${workspaceFolder}",
-      "platform": "ios"
+      // "platform": "ios"
     },
     {
       "command": "yarn android",
@@ -18,14 +18,7 @@
       "request": "launch",
       "type": "node-terminal",
       "cwd": "${workspaceFolder}",
-      "platform": "android"
-    },
-    {
-      "name": "Debug Android",
-      "cwd": "${workspaceFolder}",
-      "type": "reactnative",
-      "request": "launch",
-      "platform": "android"
+      // "platform": "android"
     },
     {
       "name": "Run Android",
@@ -35,20 +28,5 @@
       "platform": "android",
       "enableDebug": false
     },
-    {
-      "name": "Debug iOS",
-      "cwd": "${workspaceFolder}",
-      "type": "reactnative",
-      "request": "launch",
-      "platform": "ios"
-    },
-    {
-      "name": "Run iOS",
-      "cwd": "${workspaceFolder}",
-      "type": "reactnative",
-      "request": "launch",
-      "platform": "ios",
-      "enableDebug": false
-    }
   ]
 }
