--- a/ios/Durian/Info.plist
+++ b/ios/Durian/Info.plist
@@ -34,11 +34,13 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 
 	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs access to your Camera.</string>
-
-	<!-- optionally, if you want to record audio: -->
+	<string>我们需要使用您的相机来拍照和录像</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs access to your Microphone.</string>
+	<string>我们需要使用您的麦克风来录制视频</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>我们需要访问您的照片库以保存图片和视频</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>我们需要访问您的照片库以选择图片和视频</string>
 
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
