--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.29",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-animatable": "^1.4.0",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-linear-gradient": "^2.8.3",
